=========
Changelog
=========

1.0b11 (unreleased)
===================

- Use ConfigParser instead of configobj which is effectively unmaintained
  (see https://twitter.com/voidspace/status/380699699042213889) and support
  lists separated by newlines in addition to commas.


1.0b10 (2013-09-27)
===================

- Package our own virtualenv instead of depending on the system-installed one.
  This should alleviate troubles due to old virtualenv versions that package
  ``distribute``, which causes conflicts with recent ``setuptools`` versions
  (#12874).

- Update supervisor version to 3.0.


1.0b9 (2013-08-22)
==================

- Update Package component so it ignores installed packages when installing.
  This way, we actually install setuptools even when distribute is installed.
  (Otherwise it's a no-op since distribute tells pip that setuptools is
  already satisfied).

- Fix update process: wrong call to old '.batou/bin/batou' failed and early
  bootstrapping would downgrade temporarily which is confusing and superfluous.
  Fixes #12739.

1.0b8 (2013-08-17)
==================

- Remove superfluous mkdir call during remote bootstrap.

- Make ``batou init`` print that it's working. Bootstrapping can take a while,
  so at least signal that something's going on.


1.0b7 (2013-08-17)
==================

- Depend on Python2.7 to be available on the PATH during early bootstrap.
  Otherwise our chances to get a 2.7 virtualenv are pretty small, too.

- Improve project template: ignore the work/ directory by default.


1.0b6 (2013-08-17)
==================

- More MANIFEST inclusions: bootstrap-template.


1.0b5 (2013-08-17)
==================

- Improve MANIFEST so we actually package the init template and other generated
  files, like version.txt and requirements.txt.

1.0b4 (2013-08-17)
==================

- Provide a simple project-creation command, both for pip-installed batou's as
  well as spawning new projects from existing ones. Fixes #12730
